ksr -> code v1